# ipciceexample

./: .gitignore  Cargo.toml  README.md  run.sh
gui/: Cargo.toml
gui/src/: main.rs
src/: main.rs  rungui.sh  runwebview.sh
src/utility/: Cargo.toml
src/utility/src/: lib.rs  primary.rs  secondary.rs  tertiary.rs
webview/: Cargo.toml
webview/src/: main.rs
